@@ -1,0 +1,25 @@
+#!/bin/sh
+
+# Check the `DEFINE' is not a valid alias for `define'.
+
+. ./defs.sh || exit 99
+
+tr '_' "$TAB" >tst.r <<EOF
+DEFINE sym1 foo
+DEFINE(sym2,bar)
+x1 sym1
+x2 sym2
+EOF
+
+run_RATFOR -e 0 tst.r || testcase_FAIL
+test -s stderr && testcase_FAIL
+
+$FGREP -i 'define' stdout || testcase_FAIL
+$GREP 'x1 *sym1' stdout || testcase_FAIL
+$GREP 'x2 *sym2' stdout || testcase_FAIL
+$GREP 'x.*foo' stdout && testcase_FAIL
+$GREP 'x.*bar' stdout && testcase_FAIL
+
+testcase_PASS
+
+# vim: ft=sh ts=4 sw=4 et
